--- a/.github/workflows/vimdoc.yaml
+++ b/.github/workflows/vimdoc.yaml
@@ -2,8 +2,8 @@ name: vimdoc
 
 on:
   push:
-    branches: [main, alpha]
-
+    branches: [main]
+    
 jobs:
   generate-docs:
     runs-on: [ubuntu-latest]
